--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
-@import "_base.css";
-@import "_page-1.css";
-@import "_page-2.css";
-@import "_page-3.css";
-@import "_page-4.css";
-@import "_page-5.css";
-@import "_page-6.css";
-@import "_background.css";
-@import "_movement.css";
+@import "./_base.css";
+@import "./_page-1.css";
+@import "./_page-2.css";
+@import "./_page-3.css";
+@import "./_page-4.css";
+@import "./_page-5.css";
+@import "./_page-6.css";
+@import "./_background.css";
+@import "./_movement.css";
 #fp-nav span,.resume-hide{display:none}.section.item-1,.section.item-2,.section.item-3,.section.item-4,.section.item-6{text-align:center;font:50px "Microsoft Yahei";color:#fff}.resume{position:fixed;right:0;left:0;z-index:10;border:none}.navbar{background:rgba(0,0,0,0);transition:1s all ease}.navbar.blue{background:rgba(71,166,173,1)}.navbar.black{background:rgba(51,51,51,.7)}.resume .navbar-brand,.resume .navbar-brand:hover,.resume .navbar-brand:visited{color:#A7E615;font-size:18px}.resume .navbar-right li a,.resume .navbar-right li a:visited{color:#fff;font-weight:500;text-decoration:none}.resume .navbar-right li a:hover{color:#fff;text-decoration:none}.navbar-default .navbar-nav>.active>a:focus,.navbar-default .navbar-nav>.active>a:hover,.navbar-default .navbar-nav>.active>a:visited{color:#fff;background-color:#0F698A;text-decoration:none}.navbar-default .navbar-toggle,.navbar-default .navbar-toggle:focus,.navbar-default .navbar-toggle:hover{background-color:#122b40}#fp-nav{top:80%}#fp-nav ul li{vertical-align:middle;margin:10px 50px 0}#fp-nav li .active{background-position:0 bottom}#fp-nav ul li a{display:block;color:#8F9DA4;width:21px;height:21px;background:url(../images/dot.png) 5px 5px no-repeat}
